@@ -1712,10 +1712,7 @@ static PyObject* wpChar_addtimer( wpChar* self, PyObject* args )
 	PyObject* dispelName = 0;
 	PyObject* dispelFunction = 0;
 
-	if ( !PyArg_ParseTuple( args, "iOO|BBOO:char.addtimer", &expiretime, &expireFunction, &arguments, &persistent, &dispelable, &dispelName, &dispelFunction ) )
-		return 0;
-
-	if ( !PyList_Check( arguments ) )
+	if ( !PyArg_ParseTuple( args, "iOO!|BBOO:char.addtimer", &expiretime, &expireFunction, &PyList_Type, &arguments, &persistent, &dispelable, &dispelName, &dispelFunction ) )
 		return 0;
 
 	PythonFunction* expireCall = 0;
@@ -1730,18 +1727,20 @@ static PyObject* wpChar_addtimer( wpChar* self, PyObject* args )
 		Console::instance()->log( LOG_WARNING, tr("Using deprecated string as callback identifier [%1]").arg(func) );
 		expireCall = new PythonFunction( func );
 
-	        if (!expireCall->isValid()) {
-	                PyErr_Format(PyExc_RuntimeError, "The function callback you specified was invalid: %s.", func.latin1());
-	                return 0;
-	        }
+		if ( !expireCall->isValid() ) 
+		{
+			PyErr_Format(PyExc_RuntimeError, "The function callback you specified was invalid: %s.", func.latin1());
+			return 0;
+		}
 	}
 	else
 		expireCall = new PythonFunction( expireFunction );
 
-        if (!expireCall->isValid()) {
-                PyErr_SetString(PyExc_RuntimeError, "The function callback you specified was invalid.");
-                return 0;
-        }
+	if ( !expireCall->isValid() ) 
+	{
+		PyErr_SetString(PyExc_RuntimeError, "The function callback you specified was invalid.");
+		return 0;
+	}
 
 	PythonFunction* dispelCall = 0;
 	if ( dispelFunction )
@@ -1757,10 +1756,11 @@ static PyObject* wpChar_addtimer( wpChar* self, PyObject* args )
 			Console::instance()->log( LOG_WARNING, tr("Using deprecated string as callback identifier [%1]").arg(func) );
 			dispelCall = new PythonFunction( func );
 
-	                if (!dispelCall->isValid()) {
-	                        PyErr_Format(PyExc_RuntimeError, "The function callback you specified was invalid: %s.", func.latin1());
-	                        return 0;
-	                }
+			if ( !dispelCall->isValid() ) 
+			{
+				PyErr_Format(PyExc_RuntimeError, "The function callback you specified was invalid: %s.", func.latin1());
+				return 0;
+			}
 		}
 		else
 			dispelCall = new PythonFunction( expireFunction );
