@@ -628,7 +628,7 @@ static PyObject* wpItem_addtimer( wpItem* self, PyObject* args )
 	PyObject* arguments;
 	uchar persistent = 0;
 
-	if ( !PyArg_ParseTuple( args, "iOO|B:item.addtimer", &expiretime, &function, &arguments, &persistent ) )
+	if ( !PyArg_ParseTuple( args, "iOO!|B:item.addtimer", &expiretime, &function, &PyList_Type, &arguments, &persistent ) )
 		return 0;
 
 	PythonFunction* toCall = 0;
@@ -643,22 +643,21 @@ static PyObject* wpItem_addtimer( wpItem* self, PyObject* args )
 		Console::instance()->log( LOG_WARNING, tr("Using deprecated string as callback identifier [%1]").arg(func) );
 		toCall = new PythonFunction( func );
 
-                if (!toCall->isValid()) {
-                        PyErr_Format(PyExc_RuntimeError, "The function callback you specified was invalid: %s.", func.latin1());
-                        return 0;
-                }
+		if ( !toCall->isValid() ) 
+		{
+			PyErr_Format(PyExc_RuntimeError, "The function callback you specified was invalid: %s.", func.latin1());
+			return 0;
+		}
 	}
 	else
 		toCall = new PythonFunction( function );
 
-        if (!toCall->isValid()) {
+	if ( !toCall->isValid() ) 
+	{
 		PyErr_SetString(PyExc_RuntimeError, "The function callback you specified was invalid.");
 		return 0;
-        }
+	}
 
-
-	if ( !PyList_Check( arguments ) )
-		return 0;
 	PyObject* py_args = PyList_AsTuple( arguments );
 
 	cPythonEffect* effect = new cPythonEffect( toCall, py_args );
